--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "moment": "2.18.1",
     "node-sass": "^4.9.0",
     "normalize.css": "7.0.0",
@@ -40,7 +42,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
