--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "moment": "2.18.1",
     "node-sass": "^4.9.0",
@@ -27,22 +23,19 @@
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uuid": "^3.3.2",
     "validator": "^10.4.0",
     "webpack": "^4.12.2",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^3.0.8"
   },
   "name": "expensify",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -51,5 +44,12 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "20.0.4",
+    "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
+    "react-test-renderer": "^16.4.1",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
