--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "2.18.1",
     "node-sass": "^4.9.0",
     "normalize.css": "7.0.0",
+    "numeraljs": "^1.5.6",
     "raf": "3.3.2",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -46,9 +47,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "20.0.4",
     "enzyme": "3.0.0",
     "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
     "react-test-renderer": "^16.4.1",
     "webpack-dev-server": "^3.1.4"
   }
