--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^5.3.0",
     "mini-css-extract-plugin": "^0.4.1",
     "moment": "2.18.1",
     "node-sass": "^4.9.0",
@@ -25,6 +26,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "4.2.2",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uuid": "^3.3.2",
@@ -40,13 +43,15 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^6.0.0",
     "enzyme": "3.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
